--- a/bibfiles/savedrecs.bib
+++ b/bibfiles/savedrecs.bib
@@ -7705,3 +7705,67 @@ Web-of-Science-Index = {Emerging Sources Citation Index (ESCI)},
 Unique-ID = {WOS:000879317600001},
 DA = {2023-11-06},
 }
+
+@article{ WOS:000754704400001,
+Author = {Rahmah, Amalia and Santoso, Harry B. and Hasibuan, Zainal A.},
+Title = {Critical Review of Technology-Enhanced Learning using Automatic Content
+   Analysis Case Study of TEL Maturity Assessment Formulation},
+Journal = {INTERNATIONAL JOURNAL OF ADVANCED COMPUTER SCIENCE AND APPLICATIONS},
+Year = {2022},
+Volume = {13},
+Number = {1},
+Pages = {385-394},
+Month = {JAN},
+Abstract = {Technology learning (TEL) continues to grow gradually while considering
+   a multitude of factors, which underpins the need to develop a TEL
+   maturity assessment as a guideline for this gradual improvement. This
+   study investigates the potential application of TEL's expert knowledge
+   presented in various research articles as qualitative data for
+   developing assessment questionnaires. A mixed-method approach is applied
+   to analyze the qualitative data using systematic literature review (SLR)
+   with automated content analysis (ACA) as quantitative data processing to
+   strengthen the trustworthiness of the findings and reduce researcher
+   bias. This process is carried out six steps: conducting SLR, data
+   processing with ACA using Leximancer, organizing resulting concepts with
+   facet analysis, contextualizing each TEL facet, constructing the
+   assessment questionnaire for each context, and establishing TEL maturity
+   dimensions. This study generates 64 questionnaire statements grouped
+   according to the target respondents, namely students, teachers, or
+   institutions. This set of questions is also grouped into dimensions
+   representing aligned context: student performance, learning process,
+   applied technology, contents, accessibility, teachers and teachings,
+   strategy and regulation. Further research is required to distribute this
+   questionnaire for pilot respondents to design the improvement roadmap
+   and check data patterns to formulate maturity appraisals and scoring
+   methods.},
+Publisher = {SCIENCE \& INFORMATION SAI ORGANIZATION LTD},
+Address = {19 BOLLING RD, BRADFORD, WEST YORKSHIRE, 00000, ENGLAND},
+Type = {Review},
+Language = {English},
+Affiliation = {Rahmah, A (Corresponding Author), Univ Indonesia, Fac Comp Sci, Depok, Indonesia.
+   Rahmah, Amalia; Santoso, Harry B., Univ Indonesia, Fac Comp Sci, Depok, Indonesia.
+   Hasibuan, Zainal A., Univ Dian Nuswantoro, Fac Comp Sci, Semarang, Indonesia.},
+ISSN = {2158-107X},
+EISSN = {2156-5570},
+Keywords = {Automatic content analysis; ACA; assessment questionnaire; concept;
+   facet analysis; key terms; Leximancer; systematic literature review;
+   SLR; technology-enhanced learning; TEL; text analysis; theme},
+Keywords-Plus = {SOFTWARE},
+Research-Areas = {Computer Science},
+Web-of-Science-Categories  = {Computer Science, Theory \& Methods},
+Affiliations = {University of Indonesia; Dian Nuswantoro University},
+Funding-Acknowledgement = {Universitas Indonesia through Pendampingan Publikasi Internasional Q2
+   (PPI Q2) {[}NKB-550/UN2.RST/HKP.05.00/2021]},
+Funding-Text = {This work is funded by Universitas Indonesia through Pendampingan
+   Publikasi Internasional Q2 (PPI Q2), Grant No.
+   NKB-550/UN2.RST/HKP.05.00/2021.},
+Number-of-Cited-References = {21},
+Times-Cited = {0},
+Usage-Count-Last-180-days = {1},
+Usage-Count-Since-2013 = {7},
+Journal-ISO = {Int. J. Adv. Comput. Sci. Appl.},
+Doc-Delivery-Number = {YY3QC},
+Web-of-Science-Index = {Emerging Sources Citation Index (ESCI)},
+Unique-ID = {WOS:000754704400001},
+DA = {2023-11-06},
+}
